# TeslaMateCompanion

./: README.md  platformio.ini
include/: TeslaMateCompanion.h
lib/: lv_conf.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_doors_png.c  ui_img_frunk_png.c  ui_img_health_png.c  ui_img_lock_png.c  ui_img_present_png.c  ui_img_sentry_png.c  ui_img_trunk_png.c  ui_img_window_png.c  ui_main.c  ui_wifi.c
src/: display.cpp  main.cpp  network.cpp  processing.cpp  support.cpp
